get processName via repositoryService